[project]
name = "presto-measure"
version = "0.1.0"
authors = [
    {name = "Intermodulation Products AB", email = "support@intermod.pro"},
]
description = "Collection of measurement and analysis scripts for the Presto platform"
license = "MIT"
requires-python = ">= 3.10"
dependencies = [
    "numpy >= 1.24",
]

[tool.black]
line-length = 99

[tool.pylint.format]
max-line-length = 99

[tool.pyright]
ignore = ["bak/", "data/"]
typeCheckingMode = "standard"
deprecateTypingAliases = true
reportDeprecated = "warning"
reportMissingImports = false

[tool.ruff]
extend-exclude = ["bak/", "data/"]
line-length = 99

[tool.yapf]
based_on_style = "pep8"
column_limit = 99

[dependency-groups]
dev = [
    "basedpyright>=1.34.0",
]

